--- a/shippable.yml
+++ b/shippable.yml
@@ -147,15 +147,18 @@ jobs:
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - REL_VER: "master"
+                - DISK_SIZE: 100
+                - SSH_USER: "root"
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/Ubuntu_14.04/prep
+            - cp -R ../../../templates/prep/* .
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
             - export IMAGE_NAMES=$(cat images.txt)
             - export IMAGE_NAMES_SPACED=$(eval echo $(tr '\n' ' ' < images.txt))
             - export REL_VER_DASH=${REL_VER//./-}
             - export FAM_NAME=$REL_VER_DASH"-prep-u16-x86-64"
-            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}" -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
-            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}" -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
+            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}" -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
+            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}" -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
             - popd
     on_success:
@@ -193,16 +196,19 @@ jobs:
                 - ZONE: "us-east1-b"
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
+                - DISK_SIZE: 100
+                - SSH_USER: "root"
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/Ubuntu_14.04/patch
+            - cp -R ../../../templates/patch/* .
             - shipctl copy_file_from_resource_state "u14_x86_64_gcp_img_prep" "images.txt" .
             - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key u14_x86_64_gcp_img_prep IMAGE_FAM_NAME)
             - export REL_VER=$(shipctl get_resource_version_key u14_x86_64_gcp_img_prep REL_VER)
             - export REL_VER_DASH=${REL_VER//./-}
             - export FAM_NAME=$REL_VER_DASH"-patch-u14-x86-64"
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
-            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
-            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID  -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
+            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
+            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID  -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
             - popd
     on_success:
@@ -240,15 +246,18 @@ jobs:
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - REL_VER: "master"
+                - DISK_SIZE: 100
+                - SSH_USER: "root"
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/Ubuntu_16.04/prep
+            - cp -R ../../../templates/prep/* .
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
             - export IMAGE_NAMES=$(cat images.txt)
             - export IMAGE_NAMES_SPACED=$(eval echo $(tr '\n' ' ' < images.txt))
             - export REL_VER_DASH=${REL_VER//./-}
             - export FAM_NAME=$REL_VER_DASH"-prep-u16-x86-64"
-            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}" -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
-            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}" -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
+            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}" -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
+            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}" -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
             - popd
     on_success:
@@ -286,16 +295,19 @@ jobs:
                 - ZONE: "us-east1-b"
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
+                - DISK_SIZE: 100
+                - SSH_USER: "root"
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/Ubuntu_16.04/patch
+            - cp -R ../../../templates/patch/* .
             - shipctl copy_file_from_resource_state "u16_x86_64_gcp_img_prep" "images.txt" .
             - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key u16_x86_64_gcp_img_prep IMAGE_FAM_NAME)
             - export REL_VER=$(shipctl get_resource_version_key u16_x86_64_gcp_img_prep REL_VER)
             - export REL_VER_DASH=${REL_VER//./-}
             - export FAM_NAME=$REL_VER_DASH"-patch-u16-x86-64"
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
-            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
-            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID  -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
+            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
+            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID  -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
             - popd
     on_success:
@@ -337,18 +349,20 @@ jobs:
                 - ZONE: "us-east1-b"
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
+                - DISK_SIZE: 100
+                - SSH_USER: "root"
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/Ubuntu_16.04/final
+            - cp -R ../../../templates/final/* .
             - shipctl copy_file_from_resource_state "u16_x86_64_gcp_img_patch" "images.txt" .
-            - export IMAGE_NAMES_SPACED=$(eval echo $(tr '\n' ' ' < images.txt))
             - export REL_VER=$(shipctl get_resource_version_name "prod_release")
             - export REL_VER_DASH=${REL_VER//./-}
             - export FAM_NAME=$REL_VER_DASH"-final-u16-x86-64"
             - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key u16_x86_64_gcp_img_patch IMAGE_FAM_NAME)
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
             - echo $IMAGE_NAMES_SPACED
-            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
-            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
+            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
+            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
             - popd
     on_success:
@@ -385,15 +399,18 @@ jobs:
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - REL_VER: "master"
+                - DISK_SIZE: 75
+                - SSH_USER: "centos"
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/CentOS_7/prep
+            - cp -R ../../../templates/prep/* .
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
             - export IMAGE_NAMES=$(cat images.txt)
             - export IMAGE_NAMES_SPACED=$(eval echo $(tr '\n' ' ' < images.txt))
             - export REL_VER_DASH=${REL_VER//./-}
             - export FAM_NAME=$REL_VER_DASH"-prep-c7-x86-64"
-            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED=${IMAGE_NAMES_SPACED} -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
-            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED=${IMAGE_NAMES_SPACED} -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
+            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED=${IMAGE_NAMES_SPACED} -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
+            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED=${IMAGE_NAMES_SPACED} -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
             - popd
     on_success:
@@ -433,14 +450,15 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/CentOS_7/patch
+            - cp -R ../../../templates/patch/* .
             - shipctl copy_file_from_resource_state "c7_x86_64_gcp_img_prep" "images.txt" .
             - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key c7_x86_64_gcp_img_prep IMAGE_FAM_NAME)
             - export REL_VER=$(shipctl get_resource_version_key c7_x86_64_gcp_img_prep REL_VER)
             - export REL_VER_DASH=${REL_VER//./-}
             - export FAM_NAME=$REL_VER_DASH"-patch-c7-x86-64"
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
-            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
-            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID  -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
+            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json
+            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var disk_size=$DISK_SIZE -var ssh_username=$SSH_USER -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID  -var REL_VER=$REL_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$SOURCE_IMAGE_FAMILY packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
             - popd
     on_success:
