--- a/shippable.yml
+++ b/shippable.yml
@@ -1133,13 +1133,15 @@ jobs:
                 - IMG_VER: "v6.3.4"
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/CentOS_7/final
+            - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
             - cp -R ../../../templates/final/* .
             - shipctl copy_file_from_resource_state "c7_x86_64_gcp_img_final" "images.txt" .
             - export REL_VER=$(shipctl get_resource_version_name "prod_release")
             - export IMG_VER_DASH=${IMG_VER//./-}
             - export FAM_NAME=$IMG_VER_DASH"-final-c7-x86-64"
-            - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
-            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var ssh_username=$SSH_USER -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var REL_VER=$REL_VER -var IMG_VER=$IMG_VER -var FAM_NAME=$FAM_NAME -var SOURCE_IMAGE_FAMILY=$FAM_NAME packer.json 2>&1 | tee output.txt
+            - shipctl replace vars.json
+            - packer validate -var-file=vars.json packer.json
+            - packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
             - popd
     on_success:
