--- a/shippable.yml
+++ b/shippable.yml
@@ -1189,7 +1189,7 @@ jobs:
       - IN: ship_bits_gcp
         switch: off
       - TASK:
-          name: final_u14_gce_image
+          name: final_w2k16_gce_image
           runtime:
             options:
               env:
@@ -1198,7 +1198,7 @@ jobs:
                 - ZONE: "us-east1-b"
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
-                - SSH_USER: "root"
+                - WINRM_USERNAME: "packer_user"
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/WindowsServer_2016/final
             - shipctl copy_file_from_resource_state "w2k16_x86_64_gcp_img_patch" "images.txt" .
