--- a/shippable.yml
+++ b/shippable.yml
@@ -1142,7 +1142,7 @@ jobs:
       - IN: ship_bits_gcp
         switch: off
       - TASK:
-          name: patch_c7_gce_image
+          name: patch_w2k16_gce_image
           runtime:
             options:
               env:
