--- a/shippable.yml
+++ b/shippable.yml
@@ -344,7 +344,7 @@ jobs:
       - IN: api_sh_tag
       - IN: www_sh_tag
       - IN: mktg_sh_tag
-      - IN: micro_sh_tag
+#      - IN: micro_sh_tag
       - IN: nexec_sh_tag
       - TASK:
           script:
